# highlight-extractor

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  highlight_extractor.py  pyproject.toml
src/highlight_extractor/: cli.py  db.py
src/highlight_extractor/libs/: highlights.py
